fix: blocknote sidemenu z-index

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -74,3 +74,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+#tippy-11,
+#mantine-rt-dropdown,
+#mantine-r1u-dropdown {
+  z-index: 999999 !important;
+}
